--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -1,1 +1,19 @@
-@import "fontFaces.css"
+@import-normalize;
+/* css normalizer default by CRA */
+@import 'fontFaces.css';
+
+.my-masonry-grid {
+  display: flex;
+  margin-left: -20px; /* gutter size offset */
+  width: auto;
+}
+.my-masonry-grid_column {
+  padding-left: 20px; /* gutter size */
+  background-clip: padding-box;
+}
+
+/* Style your items */
+.my-masonry-grid_column > div {
+  /* change div to reference your elements you put in <Masonry> */
+  margin-bottom: 20px;
+}
